--- a/react-app/src/common.scss
+++ b/react-app/src/common.scss
@@ -1,6 +1,8 @@
 * { box-sizing: border-box; }
 body { font-family: calibri; }
 
+.nav-link { cursor: pointer; }
+
 .calculations {
     display: flex; justify-content: space-between;
 
